<resources>
    <string name="app_name">Slide Show</string>
    <string name="crop">Crop</string>
    <string name="trim_cut">Trim &amp; Cut</string>
    <string name="flip_rotate">Flip/Rotate</string>
    <string name="filter">Filter</string>
    <string name="add_music">Add Music</string>
    <string name="edit_video">Edit Video</string>
    <string name="title_activity_video_picker">VideoPickerActivity</string>
    <string name="all">All Videos</string>
    <string name="editing_text">This app exports high resolution video that\'s why it may take some time in video rendering, depending on your video file size.</string>
    <string name="warning_message">All progress will be lost. \n Do you want to reset?</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="volume">Volume</string>
    <string name="tutorial">Tutorial</string>
    <string name="rotate_right">Rotate\nRight</string>
    <string name="rotate_left">Rotate\nLeft</string>
    <string name="flip_vertical">Flip\nVertical</string>
    <string name="flip_horizontal">Flip\nHorizontal</string>
    <string name="simple">Simple</string>
    <string name="advanced">Advanced</string>
    <string name="_00_00">00:00</string>
    <string name="back">Back</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="itunes">Music</string>
    <string name="library">Library</string>
    <string name="recorder">Recorder</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="music_gallery">Music Gallery</string>
    <string name="featured_music">Featured Music</string>
    <string name="recommended">Recommended for you.</string>
    <string name="best_of">Best of the Week</string>
    <string name="all_cate">All Categories</string>
    <string-array name="view_gallery_options">
        <item>Newest First</item>
        <item>Oldest First</item>
    </string-array>
    <string-array name="video_quality_options">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
    <string-array name="file_type_options">
        <item>Mov</item>
        <item>Mp4</item>
    </string-array>
    <string-array name="crop_button_panel_titles">
        <item>Free Size</item>
        <item>Instagram</item>
        <item>4:5</item>
        <item>5:4</item>
        <item>16:9</item>
        <item>3:2</item>
        <item>4:3</item>
        <item>Square</item>
        <item>9:16</item>
        <item>2:3</item>
        <item>3:4</item>
    </string-array>
    <string-array name="crop_button_panel_ratios">
        <item>Free Size</item>
        <item>4:4</item>
        <item>4:5</item>
        <item>5:4</item>
        <item>16:9</item>
        <item>3:2</item>
        <item>4:3</item>
        <item>2:2</item>
        <item>9:16</item>
        <item>2:3</item>
        <item>3:4</item>
    </string-array>
    <string-array name="icon_categories_best_of_week">
        <item>@drawable/trending_song</item>
        <item>@drawable/featured_song</item>
        <item>@drawable/popular_song</item>
        <item>@drawable/best_new_song</item>
    </string-array>
    <string-array name="icon_categories_all">
        <item>@drawable/acoustic_song</item>
        <item>@drawable/ambient_song</item>
        <item>@drawable/cinematic_song</item>
        <item>@drawable/club_party_song</item>
        <item>@drawable/hip_hop_song</item>
        <item>@drawable/horror_song</item>
        <item>@drawable/kids_song</item>
        <item>@drawable/playful_song</item>
        <item>@drawable/pop_song</item>
        <item>@drawable/relaxing_song</item>
        <item>@drawable/rock_song</item>
        <item>@drawable/romantic_song</item>
        <item>@drawable/emotional_song</item>
        <item>@drawable/world_song</item>
        <item>@drawable/top_chart_song</item>
    </string-array>
    <string name="record_text">Start Record</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
</resources>